--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
   "author": "Lighthouse Labs",
   "license": "ISC",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.3.37",
+    "axios": "^1.5.0",
     "chalk": "^2.4.2",
     "cors": "^2.8.5",
     "dotenv": "^2.0.0",
