--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
-    "@material-tailwind/react": "^2.1.1",
     "@reach/combobox": "^0.18.0",
     "@react-google-maps/api": "^2.19.2",
     "antd": "^5.8.6",
     "axios": "^1.5.0",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.6.0",
     "lodash": "^4.17.21",
     "passive-events-support": "^1.1.0",
     "react": "^18.2.0",
