--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.37",
     "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
     "chalk": "^2.4.2",
     "cors": "^2.8.5",
     "dotenv": "^2.0.0",
