--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^2.0.0",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.9.6",
     "openai": "^4.5.0",
     "pg": "^8.5.0",
     "sass": "^1.35.1",
